--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "browser-image-compression": "^2.0.2",
     "fabric": "^5.3.0",
     "konva": "^9.3.1",
+    "lz-string": "^1.5.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.46.0",
